--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
+<html lang="jp">
+
 <head>
-<meta charset="UTF=8">
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=M+PLUS+1p:wght@500&family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,19 +29,19 @@
 	<div class="yoko1">
 	<div class="komidasi2"><p>サンプルコード</div>
 	<div class="code">
-		<p>　　	float angle=0.0;
-		<p>　　	float offset=60;
-		<p>　　	float scalar=40;
-		<p>　　	float speed=0.05;
+		<p>　　	<a href="https://o-saringu.github.io/de-ta/"target="_blank" rel="noopener noreferrer" >float</a> angle=0.0;
+		<p>　　	<a href="https://o-saringu.github.io/de-ta/"target="_blank" rel="noopener noreferrer" >float</a> offset=60;
+		<p>　　	<a href="https://o-saringu.github.io/de-ta/"target="_blank" rel="noopener noreferrer" >float</a> scalar=40;
+		<p>　　	<a href="https://o-saringu.github.io/de-ta/"target="_blank" rel="noopener noreferrer" >float</a> speed=0.05;
 		<p>　　	　
-		<p>　　	void setup(){
-		<p>　　	　size(120, 120);
+		<p>　　	<a href="https://o-saringu.github.io/5-2/"target="_blank" rel="noopener noreferrer" >void setup()</a>{
+		<p>　　	　<a href="https://o-saringu.github.io/size/"target="_blank" rel="noopener noreferrer" >size</a>(120, 120);
 		<p>　　	}　
 		<p>　　	　
-		<p>　　	　void draw(){
-		<p>　　	　　float x=offset+cos(angle)*scalar;
-		<p>　　	　　float y=offset+sin(angle)*scalar;
-		<p>　　	　　ellipse(x, y, 40, 40);
+		<p>　　	　<a href="https://o-saringu.github.io/5-1/"target="_blank" rel="noopener noreferrer" >void draw()</a>{
+		<p>　　	　　<a href="https://o-saringu.github.io/de-ta/"target="_blank" rel="noopener noreferrer" >float</a> x=offset+cos(angle)*scalar;
+		<p>　　	　　<a href="https://o-saringu.github.io/de-ta/"target="_blank" rel="noopener noreferrer" >float</a> y=offset+sin(angle)*scalar;
+		<p>　　	　　<a href="https://o-saringu.github.io/ellipse/"target="_blank" rel="noopener noreferrer" >ellipse</a>(x, y, 40, 40);
 		<p>　　	　　angle+=speed;
 		<p>　　	　}
 	</div>
